# actix-jwt-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
migrations/2025-02-15-205046_create_users/: down.sql  up.sql
migrations/2025-03-27-063237_create_models/: down.sql  up.sql
migrations/2025-03-27-063237_create_product_categories/: up.sql
migrations/2025-03-27-063552_create_products/: up.sql
src/: lib.rs  main.rs  schema.rs
src/database/: db.rs
src/http/: mod.rs
src/http/controllers/: auth_controller.rs  email_controller.rs  mod.rs  product_controller.rs  user_controller.rs
src/http/middleware/: auth_middleware.rs  brute_force_wall_middleware.rs  mod.rs  permissions_middleware.rs
src/http/requests/: mod.rs
src/http/requests/auth/: auth_login_request.rs  mod.rs
src/http/requests/email/: email_send_request.rs  mod.rs
src/http/requests/product/: mod.rs  product_filter_request.rs  product_store_request.rs  product_update_request.rs
src/http/requests/user/: mod.rs  user_activate2fa_request.rs  user_activate_request.rs  user_filter_request.rs  user_resend_activation_hash_request.rs  user_store_request.rs  user_update_request.rs
src/http/responses/: auth_login_response.rs  mod.rs
src/http/responses/auth/: auth_login_response.rs
src/http/responses/email/: email_sent_response.rs  mod.rs
src/http/responses/product/: mod.rs  product_index_response.rs  product_store_response.rs  product_update_response.rs
src/http/responses/user/: mod.rs  user_delete_response.rs  user_enable2fa_response.rs  user_index_response.rs  user_store_response.rs  user_update_response.rs
src/model/: mod.rs  user.rs
src/model/product/: mod.rs  product.rs  product_dto.rs
src/model/product_category/: mod.rs  product_category.rs  product_category_dto.rs
src/model/user/: user.rs  user_dto.rs
src/models/: mod.rs
src/models/model/: mod.rs  model.rs  model_dto.rs
src/models/product/: product.rs  product_dto.rs
src/models/user/: user.rs  user_dto.rs
src/models/user_type/: user_type.rs
src/services/: auth.rs  brute_force_protection.rs  google_oauth2.rs  mod.rs  redis_client.rs
src/test/http/: mod.rs
src/test/http/controllers/: mod.rs  product_controller_test.rs  user_controller_test.rs
