[package]
name = "actix-jwt-api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.7", features = ["postgres", "chrono", "numeric"] }
actix-web = "4"
actix-multipart = "0.7.2"
dotenv="0.15"
dotenvy = "0.15"
diesel_migrations = "2.2.0"
diesel-async = { version = "0.5.2", features = ["postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.0"
time = "0.3"
lazy_static = "1.5.0"
dotenvy_macro = "0.15.7"
lettre = "0.11.14"
lettre_email = "0.9.4"
totp-rs = {version = "5.6.0", features = ["qr"] }
rand = "0.9"
base64 = "0.22"
base32 = "0.5"
validator = { version = "0.16", features = ["derive"] }
regex = "1.11.1"